@@ -14,9 +14,7 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 
   try
     {
-      if (server.init ("Time",
-                       argc,
-                       argv) == -1)
+      if (server.init ("Time", argc, argv) == -1)
         return 1;
       else
         {
@@ -26,14 +24,14 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
   catch (const CORBA::UserException& userex)
     {
       userex._tao_print_exception ("User Exception in main");
-      return -1;
+      return 1;
     }
   catch (const CORBA::SystemException& sysex)
     {
       sysex._tao_print_exception ("System Exception in main");
-      return -1;
+      return 1;
     }
-  catch (const ::CORBA::Exception &e)
+  catch (const CORBA::Exception &e)
     {
       e._tao_print_exception ("CORBA exception in main");
       return 1;
